--- a/employees.html
+++ b/employees.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="empl-mgt-styles.css">
 
 </head>
-
+        
 <body>
 
     <div class="container">
@@ -47,8 +47,8 @@
 
     <div class="table mx-auto text-light">
         <table class="table row-count table-striped table-dark">
-            <div class="table count mx-auto text-light">
-        <h3>Showing <span class="mb-4">0</span> Employees</h3>
+            <div class="table-rows count mx-auto text-light">
+        <h3>Showing <span class="emplCount mb-4">0</span> Employees</h3>
     </div>
     <thead>
                 <tr>
@@ -103,7 +103,7 @@
                         <i class="far fa-trash-alt delete"></i>
                     </td>
                 </tr>
-
+  
             </tbody>
         </table>
     </div>
