--- a/practice.html
+++ b/practice.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8">
     <title>Assignment 05 - DOM Practice</title>
     <link rel="stylesheet" href="styles.css">
+
+    <script>
+
+        function step1() {
+            alert('Step1 - I have been clicked');
+        }
+
+        //need something about onload
+        // function step5() {
+        // alert('Step 5 - I have been clicked like all the rest');
+        // }
+        // const btn5 = document.getElementById('btnStep5');
+        // btn5.addEventListener('click', step5);
+
+    </script>
 </head>
 <body>
 
-    <button>Click me - Step 1</button>
+    <button onclick='step1()'>Click me - Step 1</button>
 
     <button id="btnStep2">Click me - Step 2</button>
 
@@ -15,9 +30,18 @@
 
     <button id="btnStep4">Click me - Step 4</button>
 
+    <button id="btnStep5">Click me - Step 5</button>
+
+    <button><a href="http://www.google.com" id='redirect'>Visit Google - Step 6</a></button>
+    
+<form>
+        <input type="text" name="input" id="text" placeholder="enter something here - Step 7">
+        <button id="step7">Click to Submit - Step 7</button>
+</form>
+
     <button id='startStep9'>Start Step 9</button>
     <button id='stopStep9'>Stop Step 9</button>
     
-    <script src="/js/dom-practice.js"></script>
+    <script src="/Assignment 6 JS/js/dom-practice.js"></script>
 </body>
 </html>
