add minor id and/or class names

--- a/employees.html
+++ b/employees.html
@@ -21,27 +21,28 @@
         <header class="add-input text-center text-light my-4">
             <h1 class="mb-4">Employee Management App</h1>
 
-            <!-- <form class="add-input text-light"> -->
 
                 <form class="search">
                     <input type="text" class="form-control mb-2" name="search" placeholder="search employees">
                     <i class="fas fa-search"></i>
                 </form>
 
+            <form id="addInput text-light" name="addInput" action="#">
+
                 <h3>Add an employee</h3>
-                <form class="name">
+                <!-- <form class="name"> -->
                     <input type="text" class="form-control mb-2" name="name" placeholder="employee name">
-                </form>
-                <form class="title">
+                <!-- </form> -->
+                <!-- <form class="title"> -->
                     <input type="text" class="form-control mb-2" name="title" placeholder="title">
-                </form>
-                <form class="ext">
+                <!-- </form> -->
+                <!-- <form class="ext"> -->
                     <input type="text" class="form-control mb-4" name="extension" placeholder="extension">
-                </form>
+                <!-- </form> -->
+            <button class="addBtn" type="submit" name="submit" value="submit">Add</button>
 
-            <!-- </form> -->
+            </form>
 
-            <button class="addBtn">Add</button>
         </header>
     </div>
 
