commented out <form> around step 7 button so disabled will work properly

--- a/practice.html
+++ b/practice.html
@@ -42,10 +42,10 @@
     <button><a href="http://www.google.com" id='redirect'>Visit Google - Step 6</a></button>
 
     <!--Step 7  -->
-<form>
+<!-- <form> -->
         <input type="text" name="input" id="text" placeholder="enter something here - Step 7">
         <button id="step7">Click to Submit - Step 7</button>
-</form>
+<!-- </form> -->
 
 <!-- Step 9 -->
     <button id='startStep9'>Start - Step 9</button>
